--- a/css-selectors/selectors-styles.css
+++ b/css-selectors/selectors-styles.css
@@ -1,16 +1,20 @@
 .synopsis {
-    color: coral;
+    color: aquamarine;
     font-style: italic;
 }
 
 .button {
     color: antiquewhite;
-    background-color: coral;
+    background-color: coral
+    
+    
+    ;
     font-weight: bold;
     padding: 20px;
     text-align: center;
     border: 2px solid coral;
     border-radius: 200px;
+    
 
     width: 200px;
     margin: 20px auto;
