--- a/Donut/index-style.css
+++ b/Donut/index-style.css
@@ -91,5 +91,31 @@ body {
 .features img {
     border-radius: 50%;   
     margin-bottom: 16px;
+    opacity: 1;
+    transition: 0.5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: 0.5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.ice:hover #smiley {
+    opacity: 0.3;
+}
+
+.ice:hover .middle{
+    opacity:1;
+}
+
+.text {
+    color: #333;
+    font-size: 30px;
 }
 
