--- a/Donut/index-style.css
+++ b/Donut/index-style.css
@@ -126,3 +126,13 @@ body {
     font-size: 30px;
 }
 
+.page-footer {
+    background-color: #222;
+    color: #ccc;
+    padding: 50px 0 30px;
+}
+
+.footer-copyright {
+    color: #666;
+    padding: 30px 0;
+}
