--- a/Donut/index-style.css
+++ b/Donut/index-style.css
@@ -1,11 +1,11 @@
 body {
     padding: 0;
     margin: 0;
-    background: #f2f6e9;
+    background: #fcdcc7;
 }
 
 .navbar {
-    background: #6ab466;
+    background: #fb9da7;
 }
 
 .nav-link,
@@ -51,7 +51,7 @@ body {
 }
 
 .description h1 {
-    color: #6ab466;
+    color: #fb9da7
 }
 
 .description p {
@@ -60,19 +60,40 @@ body {
     line-height: 1.5;
 }
 
-.description button {
-    border: 1px solid #6ab466;
-    background: #6ab466;
-    border-radius: 50px;
-    color: #f2f6e9;
-    width: 250px;
+
+.link {
+    padding:15px 35px;
+	background:#fb9da7;
+	color:#fff !important;
+	font-size:16px;
+	font-weight:400;
+	display:inline-block;
+	border-radius:50px;
+	text-transform:uppercase;
+	line-height:25px;
+	margin-bottom:20px;
+	transition:all 0.3s ease-in-out;
+    -webkit-transition:all 0.3s ease-in-out;
+    animation-delay: 1s;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-name: fadeInUp;
+    background-attachment: scroll;
 }
 
-.description button:hover {
-    border: 1px solid #fff;
-    background: #fff;
-    color: #000;
+.link:hover {
+	text-decoration:none;
+	color:#fb9da7 !important;
+	background:#fff;
 }
+
+.link:active, 
+.link:focus {
+	background: #fb9da7;
+	text-decoration:none;
+	color:#fff !important;
+}
+
 
 .features {
     margin: 4em auto;
@@ -110,7 +131,7 @@ body {
 .me:hover #profile,
 .muff:hover #muffin,
 .ice:hover #smiley {
-    opacity: 0.3;
+    opacity: 0.1;
 }
 
 .me:hover .middle3,
@@ -123,11 +144,11 @@ body {
 .textmuff,
 .text {
     color: #333;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .page-footer {
-    background-color: #222;
+    background-color: #fb9da7;
     color: #ccc;
     padding: 50px 0 30px;
 }
