--- a/Cupcake/front-page-styles.css
+++ b/Cupcake/front-page-styles.css
@@ -88,66 +88,10 @@ body {
 	color:#fff !important;
 }
 
+* { box-sizing: border-box; }
 
-.features {
-    margin: 4em auto;
-    padding: 1em;
-    position: relative;
-}
-
-.feature-title {
-    color: #333;
-    font-size: 1.3rem;
-    font-weight: 700;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.features img {
-    border-radius: 50%;   
-    margin-bottom: 16px;
-    opacity: 1;
-    transition: 0.5s ease;
-    backface-visibility: hidden;
-}
-.middle2,
-.middle3,
-.middle {
-    transition: 0.5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%)
-}
-
-.me:hover #profile,
-.muff:hover #muffin,
-.ice:hover #smiley {
-    opacity: 0.1;
-}
-
-.me:hover .middle3,
-.muff:hover .middle2,
-.ice:hover .middle{
-    opacity:1;
-}
-
-.textme,
-.textmuff,
-.text {
-    color: #333;
-    font-size: 20px;
-}
-
-.page-footer {
-    background-color: #fb9da7;
-    color: #ccc;
-    padding: 50px 0 30px;
-}
-
-.footer-copyright {
-    color: #666;
-    padding: 30px 0;
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
 }
